# ChessTests

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh  cmake_install.cmake  testBoard.cpp  testBoardStatus.cpp  testDecodeCoordinates.cpp  testDecodePieceName.cpp  testEncodeCoordinates.cpp  testGetPieceInSquare.cpp  testIsColumnClogged.cpp  testIsCoordinateValid.cpp  testIsDiagonalClogged.cpp  testIsFrontClogged.cpp  testIsMoveClogged.cpp  testIsMoveValid.cpp  testIsPieceNameValid.cpp  testIsRowClogged.cpp  testListValidMoves.cpp  testMove.cpp  tests
.github/workflows/: analyzeAndBuild.yml  buildAndRun.yml  removeAllRuns.yml  runTests.yml
Chess/tmp/: chess-mkdirs.cmake
board/: CMakeLists.txt  testIsColumnClogged.cpp  testIsPieceNameValid.cpp
src/: CMakeLists.txt
src/board/: CMakeLists.txt  testBoard.cpp  testBoardStatus.cpp  testDecodeCoordinates.cpp  testDecodePieceName.cpp  testEncodeCoordinates.cpp  testGetPieceInSquare.cpp  testIsColumnClogged.cpp  testIsCoordinateValid.cpp  testIsDiagonalClogged.cpp  testIsFrontClogged.cpp  testIsMoveClogged.cpp  testIsMoveValid.cpp  testIsPieceNameValid.cpp  testIsRowClogged.cpp  testListValidMoves.cpp  testMove.cpp
src/timer/: CMakeLists.txt
src/turnManager/: CMakeLists.txt
timer/: CMakeLists.txt
turnManager/: CMakeLists.txt
