add_executable(boardTests
                testBoard.cpp
                testBoardStatus.cpp
                testDecodeCoordinates.cpp
                testDecodePieceName.cpp
                testEncodeCoordinates.cpp
                testGetPieceInSquare.cpp
                testIsColumnClogged.cpp
                testIsCoordinateValid.cpp
                testIsDiagonalClogged.cpp
                testIsFrontClogged.cpp
                testIsMoveClogged.cpp
                testIsMoveValid.cpp
#                testIsPieceNameValid.cpp
#                testIsRowClogged.cpp
                testListValidMoves.cpp
                testMove.cpp
            )